--- a/inlämningsuppgift/appsettings.json
+++ b/inlämningsuppgift/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "defaultConnection": "Server=.\\SQLExpress;Database=store;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "defaultConnection": "Server=.\\SQLExpress;Database=travelSite;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
